overflow problem solved

--- a/spotify.css
+++ b/spotify.css
@@ -12,6 +12,8 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Rubik', sans-serif;
+    overflow-x: hidden;
+    
 }
 .spotilogo{
     width:50%;
